Revision history for Dist-Zilla-Plugin-Prereqs-AuthorDeps

{{$NEXT}}

    [TESTS]

    - Improved test coverage

0.002     2013-11-04 23:02:57 America/New_York

    [FIXED]

    - Fixed tests for old versions of Dist::Zilla

0.001     2013-11-04 21:04:57 America/New_York

    - First release
